# my-obs-overlay

./: .gitignore  package-lock.json  package.json
recognizer/: README.md  build_index.py  config.yaml  pyproject.toml  recognize.py  requirements.txt  server.py  uv.toml
recognizer/obs_bgm_recognizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
recognizer/static/: config.html
src/: app.css
src/lib/: MusicDisplay.svelte
src/routes/: +page.svelte
